# obk-layout-editor

./: .eslintrc.json  .prettierignore  .prettierrc.json  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
.github/workflows/: publish.yml
src/: layout.ts  main.ts  rust-functions.ts  store.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  menu.rs
src/assets/layouts/: Avro_Easy.json  Borno.json  Munir_Optima.json  National_Jatiya.json  Probhat.json
src/features/: edit-key.ts  manage-file.ts  preview-layout.ts
